# luna

./: .gitignore  Cargo.toml  ast.lisp  mir.dump  output  output.c  output.ll  test.fl
.metals/: metals.lock.db  metals.mv.db
ai_dev_logs/phase_1/: progress_report.md  remaining_work_plan.md
compiler/ast/: Cargo.toml
compiler/ast/src/: ast_visitor.rs  lib.rs
compiler/ast_lowering/: Cargo.toml  README.md
compiler/ast_lowering/src/: clause.rs  error.rs  expr.rs  item.rs  lib.rs  path.rs  pattern.rs  providers.rs
compiler/codegen/: Cargo.toml
compiler/codegen/src/: lib.rs  lib.rs.bak
compiler/diagnostic/: Cargo.toml
compiler/hir/: Cargo.toml
compiler/hir/src/: arena.rs  body.rs  clause.rs  common.rs  decl.rs  expr.rs  hir_id.rs  idx.rs  item.rs  lib.rs  node.rs  owner.rs  pattern.rs  ty.rs
compiler/interface/: Cargo.toml
compiler/interface/src/: lib.rs  session.rs
compiler/intrinsic/: Cargo.toml
compiler/intrinsic/src/: builtins.rs  lang_item.rs  lib.rs  symbols.rs  sysroot.rs
compiler/lex/: Cargo.toml
compiler/lex/src/: error.rs  lexer.rs  lib.rs  symbol.rs  token.rs
compiler/luna/: Cargo.toml  test_pattern.fl
compiler/luna/src/: main.rs
compiler/luna/src/ast_lower/: definition.rs  error.rs  expr.rs  mod.rs  pattern.rs
compiler/luna/src/basic/: mod.rs
compiler/luna/src/comptime/: mod.rs
compiler/luna/src/context/: mod.rs
compiler/luna/src/context/scope/: dump.rs  manager.rs  mod.rs  visitor.rs
compiler/luna/src/hir/: candidate.rs  display.rs  dump.rs  macros.rs  mod.rs
compiler/luna/src/intrinsic/: mod.rs
compiler/luna/src/parse/: ast.rs  ast_visitor.rs  basic.rs  error.rs  expressions.rs  items.rs  operators.rs
compiler/luna/src/scan/: ast_scanner.rs  error.rs  import_resolution.rs  mod.rs  vfs_scanner.rs
compiler/luna/src/vfs/: mod.rs
compiler/middle/: Cargo.toml
compiler/middle/src/: hir_package.rs  hir_query.rs  lib.rs  queries.rs
compiler/middle/src/ty/: context.rs  interner.rs  mod.rs  types.rs
compiler/mir/: Cargo.toml
compiler/mir/src/: display.rs  lib.rs
compiler/mir_build/: Cargo.toml
compiler/mir_build/src/: lib.rs
compiler/parse/: Cargo.toml
compiler/parse/src/: basic.rs  error.rs  expressions.rs  items.rs  lib.rs  operators.rs  parser.rs  patterns.rs  statements.rs
compiler/query/: Cargo.toml
compiler/query/src/: lib.rs  query.rs
compiler/resolve/: Cargo.toml
compiler/resolve/src/: binding.rs  error.rs  ids.rs  impl_directive.rs  import.rs  item_scope.rs  lib.rs  module_builder.rs  namespace.rs  resolver.rs  rib.rs  scope.rs
compiler/resolve/src/scanner/: ast_scanner.rs  mod.rs  vfs_scanner.rs
compiler/symbol/: Cargo.toml
compiler/symbol/src/: lib.rs
compiler/ty/: Cargo.toml
compiler/ty/src/: context.rs  interner.rs  lib.rs  types.rs
compiler/typeck/: Cargo.toml
compiler/typeck/src/: check.rs  lib.rs  resolve_ty.rs
compiler/vfs/: Cargo.toml
compiler/vfs/src/: lib.rs  vfs_visitor.rs
docs/algebraic-effect-and-delimited-continuation/: prompt.fl
docs/comptime/: attribute.md  prompt.fl
docs/concurrency/: prompt.fl
docs/grammar/: syntax
docs/macro/: prompt.fl
docs/pattern/: prompt.fl
docs/type/: boostrap.md  prompt.fl  propositional-type-constaints.md  references.bib  refined-type.md  毕设开题.md  毕设开题.typ
src/: main.rs
src/ast_lower/: definition.rs  error.rs  expr.rs  mod.rs  pattern.rs
src/context/: mod.rs  scan.rs  scope.rs
src/diagnostic/: emitter.rs  mod.rs
src/hir/: display.rs  mod.rs
src/lex/: error.rs  lexer.rs  mod.rs  token.rs
src/parse/: ast.rs  ast_visitor.rs  basic.rs  error.rs  expressions.rs  items.rs  mod.rs  operators.rs  parser.rs  patterns.rs  statements.rs
src/query/: engine.rs  mod.rs
src/scan/: ast_scanner.rs  import_resolution.rs  mod.rs  vfs_scanner.rs
src/vfs/: mod.rs  vfs_scope_scanner.rs  vfs_visitor.rs
(+2 files in other folders)
