[workspace]
members = [
    # Active crates (no dependency on ty/hir/query/resolve)
    "compiler/symbol",
    "compiler/ast",
    "compiler/diagnostic",
    "compiler/lex",
    "compiler/parse",
    "compiler/vfs",
    "compiler/resolve",
    "compiler/hir",
    "compiler/ast_lowering",
    # Query / type / interface layer (salsa-based):
    "compiler/query",
    "compiler/middle",
    "compiler/interface",
    "compiler/intrinsic",
    "compiler/luna",
    # Disabled until upstream crates are updated to use middle:: instead of ty:::
    # "compiler/ty",
    # "compiler/codegen",
    # "compiler/mir",
    # "compiler/mir_build",
    # "compiler/typeck",
    # "compiler/luna",
]
resolver = "2"

[workspace.dependencies]
rustc_span = "0.1.2"
ariadne = { version = "0.5.1", features = ["auto-color"] }
internment = {version = "0.8.6", features = ["arena"]}
once_cell = "1.21.3"
rustc_data_structures = "0.1.2"
thin-vec = "0.2"
rustc-arena-modified = "0.1.1"
salsa = "0.22"
symbol = { path = "compiler/symbol" }