[package]
name = "ast_lowering"
version = "0.1.0"
edition = "2024"

[dependencies]
ast = { path = "../ast" }
hir = { path = "../hir" }
diagnostic = { path = "../diagnostic" }
resolve = { path = "../resolve" }
vfs = { path = "../vfs" }
rustc_span = { workspace = true }
middle = { path = "../middle" }
