[package]
name = "interface"
version = "0.1.0"
edition = "2024"

[dependencies]
diagnostic = { path = "../diagnostic" }
intrinsic = { path = "../intrinsic" }
vfs = { path = "../vfs" }
query = { path = "../query" }
middle = { path = "../middle" }
hir = { path = "../hir" }
rustc_span = { workspace = true }
