[package]
name = "luna"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne ={ version = "0.5.1", features = ["auto-color"] }
internment = {version = "0.8.6", features = ["arena"]}
once_cell = "1.21.3"
rustc_data_structures = "0.1.2"

diagnostic = { path = "../diagnostic" }
lex = { path = "../lex" }
ast = { path = "../ast" }
parse = { path = "../parse" }
vfs = { path = "../vfs" }
rustc_span = { workspace = true }
