[package]
name = "luna"
version = "0.1.0"
edition = "2024"

[dependencies]
ast_lowering = { path = "../ast_lowering" }
diagnostic = { path = "../diagnostic" }
interface = { path = "../interface" }
middle = { path = "../middle" }
lex = { path = "../lex" }
parse = { path = "../parse" }
resolve = { path = "../resolve" }
hir = { path = "../hir" }
rustc_span = { workspace = true }
